# buddy-benchmark

./: 3_1024.json  3_256.json  3_512.json  5_1024.json  5_256.json  5_512.json  7_1024.json  7_256.json  7_512.json  9_1024.json  9_256.json  9_512.json  outputJ.csv  outputJ.json
benchmarks/ImageProcessing/: BuddyResize2D.mlir  BuddyResize2DBenchmark.cpp  BuddyRotate2D.mlir  BuddyRotate2DBenchmark.cpp  CMakeLists.txt  Conv2DBenchmark.cpp  Corr2DBenchmark.cpp  DIPBenchmark.cpp  Filter2DBenchmark.cpp  MLIRTosaResize.mlir  MLIRTosaResizeBenchmark.cpp  Main.cpp  OpenCVBenchmark.cpp  OpenCVResize2DBenchmark.cpp  OpenCVRotate2DBenchmark.cpp
include/ImageProcessing/: Kernels.h
lib/Utils/: Container.cpp
tests/UnitTests/: CMakeLists.txt
tests/UnitTests/ImageProcessing/: CMakeLists.txt  DIPCorr2D.cpp  TestCorr2D.mlir  kernels.h
